<resources>
    <string name="amore" translatable="false">Amore</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="holiday">Holiday</string>
    <string name="view">View</string>
    <string name="photos">Photos</string>
    <string name="intentions">Intentions</string>
    <string name="relations">Relations</string>
    <string name="biography">Biography</string>
    <string name="drink">Drink</string>
    <string name="smoke">Smoke</string>
    <string name="drugs">Drugs</string>
    <string name="children">Children</string>
    <string name="travel">Travel</string>
    <string name="height">Height</string>
    <string name="pets">Pets</string>
    <string name="music">Music</string>
    <string name="food">Food</string>
    <string name="political">Political</string>
    <string name="education">Education</string>
    <string name="language">Language</string>
    <string name="work">Work</string>
    <string name="income">Income</string>
    <string name="views">Views</string>
    <string name="home">Home</string>
    <string name="swipe">Match</string>
    <string name="message">Message</string>
    <string name="profile_religion_answer_one">Christian</string>
    <string name="profile_religion_answer_two">Muslim</string>
    <string name="profile_religion_answer_three">Atheist</string>
    <string name="profile_religion_answer_four">Jewish</string>
    <string name="profile_religion_answer_five">Buddhist</string>
    <string name="profile_religion_answer_six">Other</string>
    <string name="profile_relationship_answer_one">Single</string>
    <string name="profile_race_answer_one">White</string>
    <string name="profile_race_answer_two">Asian</string>
    <string name="profile_race_answer_three">Arab</string>
    <string name="profile_race_answer_four">Black</string>
    <string name="profile_race_answer_five">Mixed</string>
    <string name="profile_race_answer_six">Other</string>
    <string name="race">Race</string>
    <string name="religion">Religion</string>
    <string name="signup_gender_answer_one">Female</string>
    <string name="signup_gender_answer_two">Male</string>
    <string name="signup_gender_answer_three">Other</string>
    <string name="feet">Feet</string>
    <string name="meters">Meters</string>
    <string name="confirm">Confirm</string>
    <string name="stone">Stone</string>
    <string name="kilogram">Kilogram</string>
    <string name="rating">Rating</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="face">Face</string>
    <string name="body">Body</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="smaller">Smaller</string>
    <string name="average">Average</string>
    <string name="larger">Larger</string>
    <string name="any">Any</string>
    <string name="anything">Anything…</string>
    <string name="user_s">~User\'s~</string>
    <string name="university">University</string>
    <string name="college">College</string>
    <string name="school">School</string>
    <string name="none">None</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="fish">Fish</string>
    <string name="preferences">Preferences</string>
    <string name="age">Age</string>
    <string name="reset">Reset</string>
    <string name="profile_photo_to_do">Can you Smile for the Camera?</string>
    <string name="profile_easy_to_do">Your Intentions?</string>
    <string name="profile_bio_to_do">Your Biography needs attention,</string>
    <string name="profile_children_to_do">Tell us about Children,</string>
    <string name="profile_travel_to_do">Do You Fly?..</string>
    <string name="profile_height_to_do">How Tall are you?</string>
    <string name="profile_pet_to_do">Any Animals?…</string>
    <string name="profile_food_to_do">Do you like Food?</string>
    <string name="profile_politics_to_do">Tell us about Politics…</string>
    <string name="profile_education_to_do">Have you Studied?</string>
    <string name="profile_language_to_do">Do you speak another Language?</string>
    <string name="profile_employment_to_do">Do you Work?</string>
    <string name="profile_income_to_do">Money?..</string>
    <string name="profile_views_to_do">What are Your Views?</string>
    <string name="do_you_drink">Do you Drink?</string>
    <string name="do_you_smoke">Do you Smoke?</string>
    <string name="take_any_drugs">Take any Drugs?</string>
    <string name="profile_children_question">Do you have or want Children?</string>
    <string name="profile_children_answer_one">I don\'t have and don\'t want</string>
    <string name="profile_children_answer_two">I don\'t have and want some</string>
    <string name="profile_children_answer_three">They have left home and I don\'t want more</string>
    <string name="profile_children_answer_four">They have left home and I want more</string>
    <string name="profile_children_answer_five">I have and don\'t want more</string>
    <string name="profile_children_answer_six">I have and want more</string>
    <string name="profile_drink_question">Do you Drink Alcohol?…</string>
    <string name="profile_drink_answer_one">No I am Teetotal</string>
    <string name="profile_drink_answer_two">I am a social Drinker</string>
    <string name="profile_drink_answer_three">Yes</string>
    <string name="profile_drink_answer_four">I am dependent On Alcohol</string>
    <string name="profile_drugs_question">Do you take Drugs?</string>
    <string name="profile_drugs_answer_one">No Thanks</string>
    <string name="profile_drugs_answer_two">Just Soft Drugs Socially</string>
    <string name="profile_drugs_answer_three">I am a Drug User</string>
    <string name="profile_drugs_answer_four">I am dependent on Drugs</string>
    <string name="profile_education_answer_one">I have finished University</string>
    <string name="profile_education_answer_two">I have been to College</string>
    <string name="profile_education_answer_three">I have finished School</string>
    <string name="profile_education_answer_four">No I haven\'t</string>
    <string name="profile_employment_answer_one">I am a Company Director</string>
    <string name="profile_employment_answer_two">I am Retired</string>
    <string name="profile_employment_answer_three">I am Employed</string>
    <string name="profile_employment_answer_four">I Work for Myself</string>
    <string name="profile_employment_answer_five">I get Benefits</string>
    <string name="profile_employment_answer_six">I Don\'t Work</string>
    <string name="profile_food_question">What do you Eat?</string>
    <string name="profile_food_answer_one">I eat everything</string>
    <string name="profile_food_answer_two">I eat mostly meat</string>
    <string name="profile_food_answer_three">I eat mostly fish</string>
    <string name="profile_food_answer_four">I\'m Vegetarian</string>
    <string name="profile_food_answer_five">I\'m Vegan</string>
    <string name="profile_easy_question">What are your Intentions?</string>
    <string name="profile_easy_answer_one">I\'m here for Fun.</string>
    <string name="profile_easy_answer_two">I\'m looking for a Relationship</string>
    <string name="profile_easy_answer_three">I\'m hoping for Marriage</string>
    <string name="profile_music_question">Do you like music?</string>
    <string name="profile_music_answer_one">popular music</string>
    <string name="profile_music_answer_two">rock music</string>
    <string name="profile_music_answer_three">Disco music</string>
    <string name="profile_music_answer_four">techno music</string>
    <string name="profile_music_answer_five">rhythm and blues music</string>
    <string name="profile_music_answer_six">I don\'t like music</string>
    <string name="profile_pet_question">Do you have any pets?</string>
    <string name="profile_pet_answer_one">I have a dog</string>
    <string name="profile_pet_answer_two">I have a cat</string>
    <string name="profile_pet_answer_three">I have a bird</string>
    <string name="profile_pet_answer_four">I have fish</string>
    <string name="profile_pet_answer_five">I have a different pet</string>
    <string name="profile_pet_answer_six">I don\'t have any pets</string>
    <string name="profile_religion_question">Are you Religious?…</string>
    <string name="profile_politics_question">Do you follow Politics?</string>
    <string name="profile_politics_answer_one">I am not Political</string>
    <string name="profile_politics_answer_two">I vote Conservative</string>
    <string name="profile_politics_answer_three">I vote for Labour</string>
    <string name="profile_politics_answer_four">I am Liberal</string>
    <string name="profile_politics_answer_five">I support Independent\'s</string>
    <string name="profile_politics_answer_six">my views are moderate</string>
    <string name="profile_relationship_question">Whats your Relationship Status?…</string>
    <string name="profile_relationship_answer_two">In a Open Relationship</string>
    <string name="profile_relationship_answer_three">I\'m Cheating</string>
    <string name="profile_relationship_answer_four">Separated</string>
    <string name="profile_relationship_answer_five">Widowed</string>
    <string name="profile_relationship_answer_six">Divorced</string>
    <string name="profile_smoke_question">Do you Smoke?…</string>
    <string name="profile_smoke_answer_one">No I Don\'t Smoke</string>
    <string name="profile_smoke_answer_two">I Just Vape</string>
    <string name="profile_smoke_answer_three">Yes Only Socially</string>
    <string name="profile_smoke_answer_five">Yes I am a Heavy Smoker</string>
    <string name="profile_travel_question">Do you travel much?</string>
    <string name="profile_travel_answer_one">I don\'t have a passport</string>
    <string name="profile_travel_answer_two">I have a passport</string>
    <string name="profile_travel_answer_three">I am a frequent flyer</string>
    <string name="profile_race_question">What Race are you?</string>
    <string name="report_reason_question">Whats the problem?</string>
    <string name="report_reason_answer_one">fake or spam</string>
    <string name="report_reason_answer_two">is selling something</string>
    <string name="report_reason_answer_three">contact information or website links</string>
    <string name="report_reason_answer_four">hate speech</string>
    <string name="report_reason_answer_five">sexual content</string>
    <string name="report_reason_answer_six">other problem</string>
    <string name="signup_gender_question">What Gender are You?</string>
    <string name="signup_orientation_question">what Gender do you like?</string>
    <string name="signup_orientation_answer_one">I like Females</string>
    <string name="signup_orientation_answer_two">I like Males</string>
    <string name="signup_orientation_answer_three">I like Both</string>
    <string name="signup_orientation_answer_four">I like Anyone</string>
    <string name="profile_height_question">Whats your Height?</string>
    <string name="profile_bmi_question">How much do you Weigh?\n*We wont tell anyone*</string>
    <string name="profile_income">How much do you earn a year? \n*We wont tell Anyone*</string>
    <string name="swipe_pref_income">How much would you like your partner to earn a year?</string>
    <string name="swipe_pref_rating_users">Percentage of Users</string>
    <string name="swipe_pref_rating_question">Whats the Minimum Rating you would date?</string>
    <string name="swipe_pref_age">What Age Range would you date?</string>
    <string name="report_warning_question">What are you Reporting?</string>
    <string name="report_warning">*Warning* You will be rewarded for True reports. And penalised for False reports.*Warning*</string>
</resources>