<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityProfileEmployment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnBackground">
        <!--HEADLINE-->
        <RelativeLayout
            android:id="@+id/headline_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/transition_header"/>
        <!--BODY-->
        <LinearLayout
            android:id="@+id/body_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/footer_container"
            android:layout_below="@+id/headline_container"
            android:background="@drawable/transition_body"
            android:orientation="vertical"
            android:weightSum="7">
            <!--QUESTION-->
            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/layout_button_to_do_background"
                android:maxLines="2"
                android:text="@string/profile_employment_to_do"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="?attr/colorSecondary"/>
            <!--ANSWER-->
            <TextView
                android:id="@+id/answer_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/layout_button_to_do_background"
                android:maxLines="2"
                android:text="@string/profile_employment_answer_one"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="?attr/colorPrimary"
                android:clickable="true"
                android:focusable="true"/>
            <!--ANSWER-->
            <TextView
                android:id="@+id/answer_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/layout_button_to_do_background"
                android:maxLines="2"
                android:text="@string/profile_employment_answer_two"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="?attr/colorPrimary"
                android:clickable="true"
                android:focusable="true"/>
            <!--ANSWER-->
            <TextView
                android:id="@+id/answer_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/layout_button_to_do_background"
                android:maxLines="2"
                android:text="@string/profile_employment_answer_three"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="?attr/colorPrimary"
                android:clickable="true"
                android:focusable="true"/>
            <!--ANSWER-->
            <TextView
                android:id="@+id/answer_four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/layout_button_to_do_background"
                android:maxLines="2"
                android:text="@string/profile_employment_answer_four"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="?attr/colorPrimary"
                android:clickable="true"
                android:focusable="true"/>
            <!--ANSWER-->
            <TextView
                android:id="@+id/answer_five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/layout_button_to_do_background"
                android:maxLines="2"
                android:text="@string/profile_employment_answer_five"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="?attr/colorPrimary"
                android:clickable="true"
                android:focusable="true"/>
            <!--ANSWER-->
            <TextView
                android:id="@+id/answer_six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/layout_button_to_do_background"
                android:maxLines="2"
                android:text="@string/profile_employment_answer_six"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="?attr/colorPrimary"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>

        <!--FOOTER-->
        <LinearLayout
            android:id="@+id/footer_container"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@drawable/transition_footer"
            android:weightSum="16"
            android:baselineAligned="false">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                tools:ignore="UselessLeaf">
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile_icon_container"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true">
                <ProgressBar
                    android:id="@+id/profile_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/layout_progress_circle_background_focused"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/layout_progress_circle_foreground_focused"
                    android:textAlignment="center" />
                <ImageView
                    android:id="@+id/profile_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:textColor="?attr/colorSecondary"
                    android:gravity="center"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/icon_profile_focused"/>
                <RelativeLayout
                    android:id="@+id/profile_widget_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap">
                    <ImageView
                        android:id="@+id/profile_widget"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/profile"
                        android:scaleType="centerInside"
                        android:src="@drawable/layout_widget_focused" />

                    <TextView
                        android:id="@+id/profile_widget_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnBackground"
                        android:textStyle="bold"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/profile_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_below="@id/profile_progress_bar"
                    android:text="@string/profile"
                    android:textColor="?attr/colorSecondary"
                    android:textStyle="bold"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                tools:ignore="UselessLeaf">
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                tools:ignore="UselessLeaf">
            </RelativeLayout>
        </LinearLayout >
    </RelativeLayout>
</layout>