<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".ActivityReportWarning">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnBackground">
        <!--HEADLINE-->
        <RelativeLayout
            android:id="@+id/headline_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/transition_header">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_report"
                tools:ignore="UselessLeaf">
            </ImageView>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_report"
                android:layout_alignParentEnd="true"
                tools:ignore="UselessLeaf">
            </ImageView>
        </RelativeLayout>
        <!--BODY-->
        <RelativeLayout
            android:id="@+id/body_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headline_container"
            android:layout_above="@+id/footer_container"
            android:background="@drawable/transition_body">
            <!--question-->
            <RelativeLayout
                android:id="@+id/question_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/layout_button_to_do_background">
                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="14sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/layout_button_to_do_background"
                    android:gravity="center"
                    android:maxLines="3"
                    android:text="@string/report_warning_question"
                    android:textAlignment="center"
                    android:textColor="?attr/colorPrimary" />
                <View
                    android:id="@+id/imperial_underline"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/question"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="5dp"
                    android:background="?attr/colorSecondary" />
            </RelativeLayout>

            <!--hint-->
            <RelativeLayout
                android:id="@+id/hint_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_below="@+id/question_container"
                android:layout_above="@+id/yes_button"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/layout_button_to_do_background">

                <TextView
                    android:id="@+id/hint"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="24sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/layout_button_to_do_background"
                    android:gravity="center"
                    android:maxLines="8"
                    android:text="@string/report_warning"
                    android:textAlignment="center"
                    android:textColor="?attr/colorError" />

            </RelativeLayout>
            <!--Yes/No-->
            <TextView
                android:id="@+id/center_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
            <RelativeLayout
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/center_box"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/layout_button_to_do_background">

                <TextView
                    android:id="@+id/yes_button_text"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="24sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/layout_confirm_button_background"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/text"
                    android:textAlignment="center"
                    android:textColor="?attr/colorSecondary" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/center_box"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/layout_button_to_do_background">
                <TextView
                    android:id="@+id/no_button_text"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:autoSizeMaxTextSize="32sp"
                    android:autoSizeMinTextSize="24sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/layout_confirm_button_background"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/image"
                    android:textAlignment="center"
                    android:textColor="?attr/colorSecondary" />
            </RelativeLayout>
        </RelativeLayout>
        <!--Footer-->
        <LinearLayout
            android:id="@+id/footer_container"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@drawable/transition_footer"
            android:weightSum="16"
            android:baselineAligned="false">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:src="@drawable/icon_report"
                tools:ignore="UselessLeaf">
            </ImageView>
            <RelativeLayout
                android:id="@+id/profile_icon_container"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                tools:ignore="UselessLeaf">
            </RelativeLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:src="@drawable/icon_report"
                tools:ignore="UselessLeaf">
            </ImageView>
        </LinearLayout >
    </RelativeLayout>
</layout>